--- a/javascript/time-assessment/index.css
+++ b/javascript/time-assessment/index.css
@@ -1,6 +1,7 @@
 body {
   display: flex;
   margin: 0px !important;
+  max-width: 100%;
 }
 
 .innerhoursdiv {
@@ -13,9 +14,9 @@ body {
 
 .secondsdiv {
   display: flex;
-  background-color: lightgreen;
+  background-color: #b7e314;
   color: black;
-  height: 100vh;
+  height: 98vh;
   width: 50%;
   text-align: center;
   justify-content: center;
@@ -26,48 +27,67 @@ body {
   display: flex;
   background-color: black;
   color: white;
-  height: 100vh;
+  height: 98vh;
   width: 50%;
   justify-content: center;
   align-items: center;
 }
-/* 
-.pTags {
-  font-size: 3vw;
-  font-weight: 600;
-  color: white;
-} */
 
-.hm {
-  font-size: 15vw;
+.secondchild1st {
+  height: 90vh;
+  width: 94%;
+  font-size: 43vw;
   font-weight: 700;
-  font-family:cursive;
-  color: white;
 }
 
-.cs{
-  font-size: 33vw;
-  font-weight: 700;
-  font-family:cursive;
-  color: black;
-}
-
-.secondchild1st{
-  height: 85vh;
-  width: 85%;
+.secondchild2nd {
+  height: 13vh;
+  width: 40%;
+  color: rgb(139, 138, 138);
+  margin-left: 60%;
+  font-size: 9vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: bisque; */
 }
 
-/* .secondchild2nd{
-  height: 13vh;
-  width: 200%;
-  background-color: aquamarine;
-margin-top: -72vh;
-margin-left: 65%;
-} */
+.secondchild3rd {
+  height: 65vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-
-
+.onlyhours {
+  height: 100%;
+  width: 47%;
+  font-size: 20vw;
+  font-weight: 700;
+  color: rgba(89, 192, 232, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.onlydot {
+  /* content: ":"; */
+  height: 100%;
+  width: 6%;
+  font-size: 15vw;
+  font-weight: 700;
+  color: rgba(185, 67, 183, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: space-evenly;
+}
+.onlyminutes {
+  height: 100%;
+  width: 47%;
+  font-size: 20vw;
+  font-weight: 700;
+  color: rgb(130, 124, 124);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
