--- a/javascript/movie-application/movie.css
+++ b/javascript/movie-application/movie.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(145, 72, 213);
+    background-color: rgb(145, 72, 213) !important;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,5 +24,5 @@ body{
 }
 .namediv input::placeholder{
  
-    font-size: 20px;
+  
 }
