--- a/javascript/movie-application/movie.css
+++ b/javascript/movie-application/movie.css
@@ -45,3 +45,12 @@ body {
 .card-image{
     height: 33vh;
 }
+.movie-name{
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+}
+.movie-year{
+  display: flex;
+  justify-content: center;
+}
