--- a/javascript/form-Assessment/form-assessment.css
+++ b/javascript/form-Assessment/form-assessment.css
@@ -1,5 +1,7 @@
 
-
+body{
+    display: block !important;
+}
 .container01{
     height: auto;
     width: 20%;
@@ -11,3 +13,7 @@
     justify-content: center;
     align-items: center;
 } */
+
+.table{
+    display: block;
+}
